# intake-watcher

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.nas.yml  pyproject.toml
docs/: ARCHITECTURE.md  ARCHIVE_ASSISTANT_BRIDGE.md  CHANGELOG.md  IDE_AI_REAL_DATA_CLEANUP_PATCH_2026-06-17.md  IDE_AI_SIMPLE_UI_PATCH.md  LOCAL_DEVELOPMENT.md  NAS_DEPLOYMENT.md  OPERATIONS.md  TESTING.md
intake-watcher-main/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
intake-watcher-main/docs/: ARCHITECTURE.md  IDE_AI_IMPLEMENTATION_PROMPT.md  IDE_AI_SIMPLE_UI_PATCH.md
intake-watcher-main/intake_watcher/: cli.py  fingerprint.py  server.py
intake-watcher-main/intake_watcher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
intake-watcher-main/intake_watcher/web/: app.js
intake-watcher-main/scripts/: create_sample_intake_tree.py  run_once.py
intake-watcher-main/tests/: test_no_overwrite_promotion.py  test_temp_file_blocking.py
intake_watcher/: __init__.py  cli.py  config.py  media_probe.py  promotion.py  reports.py  server.py  temp_files.py  watcher.py
intake_watcher.egg-info/: entry_points.txt
intake_watcher/web/: app.js  index.html  styles.css
tests/: test_dashboard_clear_events.py  test_dashboard_waiting_copy.py  test_fingerprint_stability.py  test_log_deduplication.py  test_logs_written.py  test_ready_marker_mode.py
