[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intake-watcher"
version = "0.1.0"
description = "Safe pre-ingest watcher for Bonny NAS Archive Assistant workflow"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Bonny Makaniankhondo" }]
dependencies = []

[project.scripts]
intake-watcher = "intake_watcher.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["intake_watcher*"]
